[package]
name = "rust_sqlite_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.2"                                                    # Web framework
serde = { version = "1.0", features = ["derive"] }                   # Serialization
serde_json = "1.0"                                                   # JSON handling
rusqlite = { version = "0.29", features = ["bundled"] }              # SQLite